infrastructure/cluster-policies/allow-ambient-hostprobes.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
    name: "allow-ambient-hostprobes"
spec:
    description: "Allows SNAT-ed kubelet health check probes into ambient pods"
    enableDefaultDeny:
        egress: false
        ingress: false
    endpointSelector: {}
    ingress:
        - fromCIDR:
              - "169.254.7.127/32"
